--- a/HJCS.SageAssessment/HJCS.SageAssessment.csproj
+++ b/HJCS.SageAssessment/HJCS.SageAssessment.csproj
@@ -10,11 +10,16 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="1.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.2" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HJCS.SageAssessment.Data\HJCS.SageAssessment.Data.csproj" />
+    <ProjectReference Include="..\HJCS.SageAssessment.Domain\HJCS.SageAssessment.Domain.csproj" />
+    <ProjectReference Include="..\HJCS.SageAssessment.Repository\HJCS.SageAssessment.Repository.csproj" />
   </ItemGroup>
 
 </Project>
