Add sales controller, customer methods

--- a/HJCS.SageAssessment/Properties/launchSettings.json
+++ b/HJCS.SageAssessment/Properties/launchSettings.json
@@ -16,7 +16,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "HJCS.SageAssessment": {
+    "HJCS.SageAssessment.WebAPI": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
