Add invoice methods on sales controller

--- a/HJCS.SageAssessment/Properties/launchSettings.json
+++ b/HJCS.SageAssessment/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "api/sales",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -19,7 +19,7 @@
     "HJCS.SageAssessment.WebAPI": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "api/sales",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
