Move WebAPI URIs to configuration file

--- a/HJCS.SageAssessment.Client/appsettings.Development.json
+++ b/HJCS.SageAssessment.Client/appsettings.Development.json
@@ -6,5 +6,9 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "WebApi": {
+    "InvoiceUri": "http://localhost:52379/api/invoice",
+    "CustomerUri": "http://localhost:52379/api/customer"
   }
 }
