Avoid magic strings, move to configuration file

--- a/HJCS.SageAssessment.Client/appsettings.json
+++ b/HJCS.SageAssessment.Client/appsettings.json
@@ -4,5 +4,7 @@
     "LogLevel": {
       "Default": "Warning"
     }
-  }
+  },
+  "AboutMessage": "Sage Assessment",
+  "ContactMessage": "Héctor Javier Castillo Suazo"
 }
